add dbscan e redes neurais com Keras

--- a/07 - Avaliacao de modelos e metricas/3-Validacao_Cruzada_2.ipynb
+++ b/07 - Avaliacao de modelos e metricas/3-Validacao_Cruzada_2.ipynb
@@ -129,24 +129,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.98039216, 0.96078431, 1.        ])"
+       "array([0.96, 0.92])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = neighbors.KNeighborsClassifier(n_neighbors=3)\n",
-    "model_selection.cross_val_score(model, X, y, cv=3)"
+    "model_selection.cross_val_score(model, X, y, cv=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
